--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/core": "^2.11.3",
+    "@tiptap/extension-document": "^2.11.3",
+    "@tiptap/extension-paragraph": "^2.11.3",
+    "@tiptap/extension-text": "^2.11.3",
+    "@tiptap/extension-text-style": "^2.11.3",
+    "@tiptap/pm": "^2.11.3",
+    "@tiptap/react": "^2.11.3",
+    "@tiptap/starter-kit": "^2.11.3",
+    "next": "14.2.23",
+    "prosemirror-model": "^1.24.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.23"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.23"
+    "typescript": "^5"
   }
 }
