--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tiptap/core": "^2.11.3",
+    "@tiptap/extension-color": "^2.11.3",
     "@tiptap/extension-document": "^2.11.3",
     "@tiptap/extension-paragraph": "^2.11.3",
     "@tiptap/extension-text": "^2.11.3",
